bynkc/tests/fixtures/negative/485_messages_placeholder_mismatch/src/bundle.bynk
commons bundle

uses bynk.locale

messages en @reference {
  "greeting" => "Hello, {name}!"
}

messages fr {
  "greeting" => "Bonjour, {firstname} !"
}
